--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" href="./images/kisspng-favicon-man-icon-happy-people-cliparts-5a89cf4b4f3df8.3912832415189809393246.jpg" type="image/x-icon">
     <title>Aayan Rahman</title>
 </head>
 <body style="background-color: crimson;">
