some css changes

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div>
             <img src="./images/IMG_20221206_164326_070.jpg" alt="">
         </div>
-        <div >
-            <p class="side">Hi I am Aayan. I am a baby. every body loves me . i am so cute.so everone fall in love with me. i love my mother,father,brother,nana,nani,mamas.i have a lot of mama ,,, my all mama loves me,,, i also love them .. but i cant tell them because i cant speak </p>
+        <div class="side">
+            <p >Hi I am Aayan. I am a baby. every body loves me . i am so cute.so everone fall in love with me. i love my mother,father,brother,nana,nani,mamas.i have a lot of mama ,,, my all mama loves me,,, i also love them .. but i cant tell them because i cant speak </p>
         </div>
        </div>
     </div>
